--- a/src/ui/component/shared/Warning.pug
+++ b/src/ui/component/shared/Warning.pug
@@ -11,10 +11,10 @@ script.
 
 style.
 	.warning
-		background lightgoldenrodyellow
-		border-radius 10px
+		background #ffdd5d
+		border-radius 12px
 		color black
-		max-width 560px
+		max-width 480px
 		padding 10px
 		width 100%
 	.warning-body
