ui: final design, construction, and cleanup work for MVP
- brand new Directory page (start page)
- new Multireddit & Collection pages based on Subreddit page
- adjustment of radial menu option positions
- final design work on Post, Subreddit, etc.
- removal of unused code and unused import statements

--- a/src/ui/component/comment/CommentEditor.pug
+++ b/src/ui/component/comment/CommentEditor.pug
@@ -29,6 +29,8 @@ form.comment-editor
 			Button(action={() => submit()} loading={sending} loading_text='Sending...' text='Submit')
 
 style.
+	.comment-editor
+		width 480px
 	.comment-editor-actions
 		display flex
 		justify-content flex-end
@@ -36,7 +38,7 @@ style.
 	.comment-editor-text-field
 		border 1px solid
 		border-radius 1em
-		font 13px monospace
+		font-family monospace
 		line-height inherit
 		padding 1em
 		resize none
