--- a/src/ui/routing/Router.pug
+++ b/src/ui/routing/Router.pug
@@ -107,18 +107,18 @@ script.
 AllGlobals
 	{#if page === 'collection'}
 		{#key feed.collection_id}
-			Collection(filter={feed.filter} id={feed.collection_id} tab={subpage})
+			Collection(id={feed.collection_id} subreddit_name={feed.subreddit_name} tab={subpage})
 	{:else if page === 'directory'}
 		Directory
 	{:else if page === 'multireddit'}
 		{#key feed.multireddit_name}
 			{#key feed.user_name}
-				Multireddit(after_id={feed.after_id} filter={feed.filter} name={feed.multireddit_name} search={feed.search} sort={feed.sort} tab={subpage} time_range={feed.time_range} user_name={feed.user_name})
+				Multireddit(after_id={feed.after_id} filter={feed.filter} multireddit_name={feed.multireddit_name} search={feed.search} sort={feed.sort} tab={subpage} time_range={feed.time_range} user_name={feed.user_name})
 	{:else if page === 'post'}
 		{#key post.id}
 			{#key post.focus_comment_id}
 				{#key post.focus_comment_parent_count}
-					Post(comments_sort={post.comments_sort} expanded={true} focus_comment_parent_count={post.focus_comment_parent_count} focus_comment_id={post.focus_comment_id} id={post.id} show_subreddit={true})
+					Post(comments_sort={post.comments_sort} expanded={true} focus_comment_parent_count={post.focus_comment_parent_count} focus_comment_id={post.focus_comment_id} id={post.id})
 	{:else if page === 'subreddit'}
 		{#key feed.subreddit_name}
 			Subreddit(after_id={feed.after_id} filter={feed.filter} name={feed.subreddit_name} search={feed.search} sort={feed.sort} tab={subpage} time_range={feed.time_range})
