post: don't force comments to be full width

--- a/src/ui/component/comment/Comment.pug
+++ b/src/ui/component/comment/Comment.pug
@@ -127,7 +127,7 @@ style.
 		color var(--c-comment-text)
 		display inline-block
 		font-weight 500
-		width 480px
+		max-width 480px
 		padding 10px 1em
 		position relative
 		&.comment-deleted
